--- a/config/zones/BD.yaml
+++ b/config/zones/BD.yaml
@@ -7,7 +7,7 @@ capacity:
   biomass:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 10.0
+      value: 50.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -24,25 +24,34 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 4770.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 6040.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 8230.0
+      value: 8300.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 9040.0
+      value: 9120.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 10190.0
+      value: 10270.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
-      value: 10310.0
+      value: 10380.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
-      value: 11120.0
+      value: 11350.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 11390.0
+      value: 11700.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 12030.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 13050.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -53,10 +62,10 @@ capacity:
       value: 2910.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 4850.0
+      value: 4860.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 6390.0
+      value: 6400.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 6920.0
@@ -65,7 +74,7 @@ capacity:
       value: 7280.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 7550.0
+      value: 7560.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 7720.0
@@ -90,16 +99,18 @@ capacity:
       value: 520.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 770.0
+      value: 750.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 850.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
-    - datetime: '2024-03-08'
+    - _comment: https://www.tbsnews.net/bangladesh/energy/countrys-first-commercial-wind-power-plant-starts-production-810678
+      datetime: '2024-03-08'
       source: TBS News
       value: 60.0
-      _comment: https://www.tbsnews.net/bangladesh/energy/countrys-first-commercial-wind-power-plant-starts-production-810678
-
 contributors:
   - systemcatch
   - alixunderplatz
