--- a/config/zones/CH.yaml
+++ b/config/zones/CH.yaml
@@ -36,10 +36,10 @@ capacity:
       value: 15050.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 15070.0
+      value: 16010.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 15280.0
+      value: 16220.0
   nuclear:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -50,25 +50,28 @@ capacity:
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 1910.0
+      value: 1860.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 2170.0
+      value: 2120.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 2500.0
+      value: 2420.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
-      value: 2970.0
+      value: 2880.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
-      value: 3650.0
+      value: 3520.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 4340.0
+      value: 4530.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 5840.0
+      value: 6090.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 7790.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -82,6 +85,12 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 700.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 710.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 740.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -89,6 +98,9 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
 contributors:
   - corradio
   - postronium
