--- a/config/zones/CR.yaml
+++ b/config/zones/CR.yaml
@@ -43,6 +43,9 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 2370.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 2350.0
   oil:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -56,6 +59,9 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 380.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -85,6 +91,9 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 410.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 400.0
 contributors:
   - corradio
   - jarek
