--- a/config/zones/IE.yaml
+++ b/config/zones/IE.yaml
@@ -7,10 +7,10 @@ capacity:
   biomass:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 60.0
+      value: 40.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 70.0
+      value: 50.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -18,10 +18,16 @@ capacity:
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 4380.0
+      value: 4600.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
-      value: 4270.0
+      value: 4490.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 4430.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 4820.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -29,29 +35,35 @@ capacity:
   oil:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 830.0
+      value: 880.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 50.0
+      value: 60.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
-      value: 150.0
+      value: 160.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
-      value: 230.0
+      value: 250.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 290.0
+      value: 340.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 740.0
+      value: 890.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 1340.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -77,7 +89,10 @@ capacity:
       value: 4540.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 4810.0
+      value: 4740.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 4940.0
 contributors:
   - corradio
   - nessie2013
