--- a/config/zones/MD.yaml
+++ b/config/zones/MD.yaml
@@ -11,14 +11,17 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 1600.0
+      value: 1400.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 1180.0
+      value: 1380.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -35,7 +38,10 @@ capacity:
       value: 60.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
-      value: 90.0
+      value: 200.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 340.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -55,6 +61,9 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 140.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
 contributors:
   - systemcatch
   - alixunderplatz
