--- a/config/zones/ML.yaml
+++ b/config/zones/ML.yaml
@@ -44,6 +44,9 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 510.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 610.0
 country: ML
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
