--- a/config/zones/MN.yaml
+++ b/config/zones/MN.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 960.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 1150.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -21,18 +24,30 @@ capacity:
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 50.0
+      value: 60.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 60.0
+      value: 70.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 90.0
+      value: 100.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2024-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
 contributors:
