--- a/config/zones/MT.yaml
+++ b/config/zones/MT.yaml
@@ -8,6 +8,12 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -21,16 +27,16 @@ capacity:
       value: 130.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 160.0
+      value: 150.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
-      value: 190.0
+      value: 180.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
-      value: 210.0
+      value: 190.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 220.0
+      value: 210.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 230.0
