--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -21,6 +21,9 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1380.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 1450.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -63,10 +66,16 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 3760.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 4060.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
 contributors:
   - q--
   - systemcatch
