--- a/config/zones/SB.yaml
+++ b/config/zones/SB.yaml
@@ -11,10 +11,16 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
 country: SB
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
