--- a/config/zones/TN.yaml
+++ b/config/zones/TN.yaml
@@ -40,6 +40,9 @@ capacity:
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 510.0
+    - datetime: '2024-01-01'
+      source: Ember, Yearly electricity data
+      value: 770.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
