update filter groups to match python config files

--- a/.github/filter-groups.yml
+++ b/.github/filter-groups.yml
@@ -17,6 +17,8 @@ json:
 
 python:
   - '**.py'
+  - 'poetry.toml'
   - 'pyproject.toml'
   - 'poetry.lock'
-  - '.poetry-version'
+  - '.python-version'
+  - 'parsers.dockerfile'
