--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{ include = "electricitymap" }]
 include = ["config/*.json", "config/*.yaml"]
 
 [tool.poetry.dependencies]
-python = '>= 3.10, < 3.11'
+python = '~3.11'
 pydantic = "^1.9.0"
 beautifulsoup4 = { version = "~4.6.0", optional = true }
 demjson3 = { version = "^3.0.5", optional = true }
