add data centers to the map

--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "generate-bbox": "node --import=./scripts/register-tsNodeESM.js ./geo/generateZoneBoundingBoxes.ts",
     "generate-zones-config": "node --import=./scripts/register-tsNodeESM.js ./scripts/generateZonesConfig.ts",
     "generate-sitemap": "node ./scripts/generateSitemap.js",
-    "predev": "pnpm run create-generated-files",
+    "copy-data-centers": "node ./scripts/copyDataCenters.js",
+    "predev": "pnpm run copy-data-centers && pnpm run create-generated-files",
     "dev": "vite",
     "cy:component": "cypress open --component -b electron",
     "cy:e2e": "cypress open --e2e -b electron",
