--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,13 @@
     "mockserver": "cd ../mockserver && pnpm run start",
     "prebuild": "pnpm run create-generated-files",
     "build": "vite build",
-    "create-generated-files": "pnpm run generate-world && copy-data-centers && pnpm run generate-zones-config && pnpm run generate-sitemap",
+    "create-generated-files": "pnpm run generate-world && pnpm run generate-zones-config && pnpm run generate-sitemap",
     "generate-world": "node --import=./scripts/register-tsNodeESM.js ./geo/generateWorld.ts",
     "generate-bbox": "node --import=./scripts/register-tsNodeESM.js ./geo/generateZoneBoundingBoxes.ts",
     "generate-zones-config": "node --import=./scripts/register-tsNodeESM.js ./scripts/generateZonesConfig.ts",
     "generate-sitemap": "node ./scripts/generateSitemap.js",
     "copy-data-centers": "node ./scripts/copyDataCenters.js",
-    "predev": "pnpm run copy-data-centers && pnpm run create-generated-files",
+    "predev": "node ./scripts/copyDataCenters.js && pnpm run create-generated-files",
     "dev": "vite",
     "cy:component": "cypress open --component -b electron",
     "cy:e2e": "cypress open --e2e -b electron",
