Revert "Python upgrade 3.11 (#8133)"
This reverts commit d41ebd4559089bd6ecd4341f6b485d442e7f6d49.

Due to a problem in the main repo, we need to revert back to 3.10 temporarily while we fix it.

--- a/.github/filter-groups.yml
+++ b/.github/filter-groups.yml
@@ -17,8 +17,6 @@ json:
 
 python:
   - '**.py'
-  - 'poetry.toml'
   - 'pyproject.toml'
   - 'poetry.lock'
-  - '.python-version'
-  - 'parsers.dockerfile'
+  - '.poetry-version'
