--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto-detect text vs. binary files and ensure newlines are always LF for
 # text files on check-out and check-in.
 * text=auto eol=lf
-
 # Denote all files in the `parsers/test/mocks` directory as vendored.
 # This makes GitHub ignore them for language statistics.
 parsers/test/mocks/** linguist-vendored
+*.big.geojson filter=lfs diff=lfs merge=lfs -text
