--- a/config/zones/IN-NE.yaml
+++ b/config/zones/IN-NE.yaml
@@ -5,37 +5,37 @@ bounding_box:
     - 33.486435
 capacity:
   biomass:
-    datetime: '2023-12-01'
-    source: mnre.gov.in
-    value: 15.8
+    - datetime: '2023-12-01'
+      source: mnre.gov.in
+      value: 15.8
   coal:
-    datetime: '2023-12-01'
-    source: cea.nic.in
-    value: 750.0
+    - datetime: '2023-12-01'
+      source: cea.nic.in
+      value: 750.0
   gas:
-    datetime: '2023-12-01'
-    source: cea.nic.in
-    value: 1664.95
+    - datetime: '2023-12-01'
+      source: cea.nic.in
+      value: 1664.95
   hydro:
-    datetime: '2023-12-01'
-    source: cea.nic.in
-    value: 2348.8
+    - datetime: '2023-12-01'
+      source: cea.nic.in
+      value: 2348.8
   nuclear:
-    datetime: '2023-12-01'
-    source: cea.nic.in
-    value: 0.0
+    - datetime: '2023-12-01'
+      source: cea.nic.in
+      value: 0.0
   oil:
-    datetime: '2023-12-01'
-    source: cea.nic.in
-    value: 36.0
+    - datetime: '2023-12-01'
+      source: cea.nic.in
+      value: 36.0
   solar:
-    datetime: '2023-12-01'
-    source: mnre.gov.in
-    value: 236.9
+    - datetime: '2023-12-01'
+      source: mnre.gov.in
+      value: 236.9
   wind:
-    datetime: '2023-12-01'
-    source: mnre.gov.in
-    value: 0.0
+    - datetime: '2023-12-01'
+      source: mnre.gov.in
+      value: 0.0
 contributors:
   - unitrium
 country: IN
