feat(parsers): add demand data for GB Elexon

--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -404,7 +404,7 @@ fallbackZoneMixes:
         unknown: 0.01229548242156918
         wind: 0.324336935214777
 parsers:
-  consumption: ENTSOE.fetch_consumption
+  consumption: ELEXON.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
   generationForecast: ENTSOE.fetch_generation_forecast
   price: NORDPOOL.fetch_price
