--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -891,6 +891,7 @@ parsers:
   production: US_PJM.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_PJM.fetch_wind_solar_forecasts
+  gridAlerts: US_PJM.fetch_grid_alerts
 region: Americas
 sources:
   INCER ACV:
