--- a/config/retired_zones/ES-CN-FVLZ.yaml
+++ b/config/retired_zones/ES-CN-FVLZ.yaml
@@ -75,7 +75,10 @@ emissionFactors:
         value: 726.59
       - datetime: '2023-01-01'
         source: EU-ETS, REE
-        value: 699.295
+        value: 692.712
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 692.082
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -164,7 +167,10 @@ emissionFactors:
         value: 970.59
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
-        value: 943.295
+        value: 936.712
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 936.082
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
