--- a/config/zones/ES-CN-GC.yaml
+++ b/config/zones/ES-CN-GC.yaml
@@ -76,6 +76,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE
         value: 689.499
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 690.396
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -171,6 +174,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
         value: 933.499
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 934.396
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
