--- a/config/zones/ES-CN-HI.yaml
+++ b/config/zones/ES-CN-HI.yaml
@@ -80,6 +80,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE
         value: 709.656
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 711.721
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -175,6 +178,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
         value: 953.656
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 955.721
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
