--- a/config/zones/ES-CN-IG.yaml
+++ b/config/zones/ES-CN-IG.yaml
@@ -78,6 +78,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE
         value: 713.29
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 684.308
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -173,6 +176,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
         value: 957.29
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 928.308
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
