--- a/config/zones/ES-CN-LP.yaml
+++ b/config/zones/ES-CN-LP.yaml
@@ -76,6 +76,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE
         value: 677.072
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 669.797
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -171,6 +174,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
         value: 921.072
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 913.797
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
