--- a/config/zones/ES-CN-LZ.yaml
+++ b/config/zones/ES-CN-LZ.yaml
@@ -77,7 +77,10 @@ emissionFactors:
         value: 675.258
       - datetime: '2023-01-01'
         source: EU-ETS, REE
-        value: 665.011
+        value: 652.743
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 650.514
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -166,7 +169,10 @@ emissionFactors:
         value: 919.258
       - datetime: '2023-01-01'
         source: EU-ETS, REE
-        value: 909.011
+        value: 896.742
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 894.514
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
