--- a/config/zones/ES-CN-TE.yaml
+++ b/config/zones/ES-CN-TE.yaml
@@ -76,6 +76,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE
         value: 694.468
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE
+        value: 692.128
   lifecycle:
     battery discharge:
       - datetime: '2018-01-01'
@@ -171,6 +174,9 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: EU-ETS, REE; IPCC 2014
         value: 938.468
+      - datetime: '2024-01-01'
+        source: EU-ETS, REE; IPCC 2014
+        value: 936.128
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
