--- a/config/zones/FI.yaml
+++ b/config/zones/FI.yaml
@@ -56,6 +56,9 @@ capacity:
     - datetime: '2025-02-10'
       source: fingrid.fi
       value: 1256
+    - datetime: '2025-05-09'
+      source: fingrid.fi
+      value: 1367
   unknown:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -79,6 +82,9 @@ capacity:
     - datetime: '2025-01-23'
       source: fingrid.fi
       value: 8411
+    - datetime: '2025-06-10'
+      source: fingrid.fi
+      value: 8760
 contributors:
   - corradio
   - nessie2013
