--- a/config/zones/CA-ON.yaml
+++ b/config/zones/CA-ON.yaml
@@ -339,6 +339,7 @@ parsers:
   productionCapacity: CA_ON.fetch_production_capacity
   consumptionForecast: CA_ON.fetch_consumption_forecast
   productionPerModeForecast: CA_ON.fetch_wind_solar_forecasts
+  gridAlerts: CA_ON.fetch_grid_alerts
 region: Americas
 sources:
   ? "Mallia, E., Lewis, G. \"Life cycle greenhouse gas emissions of electricity generation\
