--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ freezegun = { version = "^0.3.15", optional = true }
 imageio = { version = "^2.18.0", optional = true }
 lxml = { version = "^4.9.1", optional = true }
 opencv-python = { version = "4.8.1.78", optional = true }
-pandas = { version = "^1.4.4", optional = true }
+pandas = { version = ">=1.4.4", optional = true }
 pytesseract = { version = "0.2.0", optional = true }
 requests = { version = "~2.32.2", optional = true }
 signalr-client-threads = { version = "~0.0.12", optional = true }
@@ -31,6 +31,8 @@ ruff = "0.11.2"
 tzdata = "^2025.2"
 numpy = "^1.24.4"
 odfpy = { version = "^1.4.1", optional = true }
+rasterio = "^1.4.3"
+rioxarray = "^0.19.0"
 
 [tool.poetry.scripts]
 test-parser = 'test_parser:test_parser'
