--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,18 @@ numpy = "^1.24.4"
 odfpy = { version = "^1.4.1", optional = true }
 rasterio = "^1.4.3"
 rioxarray = "^0.19.0"
+eccodes-python = "^0.9.9"
+cfgrib = "^0.9.15.0"
+ipykernel = "^6.29.5"
+dask = "^2025.5.1"
+jinja2 = "^3.1.6"
+flox = "^0.10.4"
+tqdm = "^4.67.1"
+matplotlib = "^3.10.3"
+cartopy = "^0.24.1"
+plotly = "^6.1.2"
+nbformat = "^5.10.4"
+geopandas = "^1.1.0"
 
 [tool.poetry.scripts]
 test-parser = 'test_parser:test_parser'
